--- a/markdown-previewer-app/package.json
+++ b/markdown-previewer-app/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
