--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "front-matter": "^4.0.2",
+    "marked": "^15.0.6",
     "marked-react": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
