--- a/markdown-previewer-app/vercel.json
+++ b/markdown-previewer-app/vercel.json
@@ -1,9 +1,8 @@
 {
-    "cleanUrls": true,
     "rewrites": [
         {
-            "source": "/:path*",
-            "destination": "/index.html"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
